# nix-user-chroot

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  container.sh  flake.nix  shell.nix
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  publish.yml
scripts/: create-release.sh
src/: install.rs  lib.rs  main.rs  mkdtemp.rs
tests/: integration.rs  path_config.rs
