[package]
name = "nix-user-chroot"
description = "Install & Run nix without root permissions"
license = "MIT"
version = "1.2.2"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"
homepage = "https://github.com/nix-community/nix-user-chroot"
documentation = "https://github.com/nix-community/nix-user-chroot"
repository = "https://github.com/nix-community/nix-user-chroot"

[dependencies]
env_logger = "0.9"
libc = "0.2.117"
log = "0.4"
nix = "0.23.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
