[package]
name = "nix-user-chroot"
description = "Install & Run nix without root permissions"
license = "MIT"
version = "1.2.2"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"
homepage = "https://github.com/nix-community/nix-user-chroot"
documentation = "https://github.com/nix-community/nix-user-chroot"
repository = "https://github.com/nix-community/nix-user-chroot"

[dependencies]
nix = "0.25.0"
libc = "0.2.135"
