[package]
name = "nix-user-chroot"
description = "Install & Run nix without root permissions"
license = "MIT"
version = "2.1.1"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2021"
homepage = "https://github.com/nix-community/nix-user-chroot"
documentation = "https://github.com/nix-community/nix-user-chroot"
repository = "https://github.com/nix-community/nix-user-chroot"

[dependencies]
nix = { version = "0.31", features = ["mount", "sched", "signal", "user", "process", "fs"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
